# optios

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  setup-linux.sh  setup-macos.sh  setup-windows.ps1  x86_64-optios.json
.cargo/: config.toml
.cursor/rules/: dev-ex.mdc
src/: event_loop.rs  hardware.rs  interrupts.rs  loader.rs  main.rs  memory.rs  rtc.rs  serial.rs  vga_text.rs
